[package]
name = "rs-hosts2arrow-ipc-stream"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"

[[bin]]
name = "hosts2arrow-ipc-stream"

[dependencies.hostfile]
version = "1"
default-features = false
features = [
]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.arrow]
version = "57"
default-features = false
features = [
	"ipc",
]

[dependencies.arrow-array]
version = "57"

[dependencies.arrow-schema]
version = "57"
