[package]
name = "rs-hosts2arrow-ipc-stream"
version = "0.1.0"
edition = "2024"

description = "Prints the hosts info as an ipc stream."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-hosts2arrow-ipc-stream"
homepage = "https://github.com/takanoriyanagitani/rs-hosts2arrow-ipc-stream"
documentation = "https://docs.rs/rs-hosts2arrow-ipc-stream/latest"
keywords = ["arrow", "ipc", "stream", "hosts"]
category = ["command-line-utilities"]

exclude = [
	"hosts2arrow-ipc-stream",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"

[[bin]]
name = "hosts2arrow-ipc-stream"

[dependencies.hostfile]
version = "1"
default-features = false
features = [
]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.arrow]
version = "57"
default-features = false
features = [
	"ipc",
]

[dependencies.arrow-array]
version = "57"

[dependencies.arrow-schema]
version = "57"
